<resources>
    <string name="app_name">InPost Recruitment Task</string>

    <string name="status_adopted_at_sorting_center">Przyjęta w Sortowni</string>
    <string name="status_sent_from_sorting_center">Wysłana z Sortowni</string>
    <string name="status_adopted_at_source_branch">Przyjęta w Oddziale</string>
    <string name="status_sent_from_source_branch">Wysłana z Oddziału</string>
    <string name="status_avizo">Powrót do Oddziału</string>
    <string name="status_confirmed">W trakcie przygotowania</string>
    <string name="status_created">Przesyłka utworzona</string>
    <string name="status_delivered">Odebrana</string>
    <string name="status_other">Inny status</string>
    <string name="status_out_for_delivery">Wydana do doręczenia</string>
    <string name="status_pickup_time_expiry">Upłynął termin odbioru</string>
    <string name="status_ready_to_pickup">Gotowa do odbioru</string>
    <string name="status_returned_to_sender">Zwrot do Nadawcy</string>

    <!--Shipment details-->
    <string name="empty_shipments">Shipments are empty please refresh!</string>
    <string name="shipment_number_title">Shipment number</string>
    <string name="shipment_status_title">Status</string>
    <string name="shipment_sender_title">Sender</string>
    <string name="shipment_details">Details</string>
    <string name="shipment_expiry_delivery">Expiry</string>
    <string name="shipment_stored_delivery">Stored</string>
    <string name="shipment_archive_button_text">Archive</string>
    <string name="shipment_pick_up">Pick up</string>
    <string name="unknown_sender_email">Unknown sender e-mail</string>

    <!--Errors-->
    <string name="unknown_error">Unknown error</string>
    <string name="no_internet">No internet available</string>

</resources>
