<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <!--Shipment number-->
    <TextView
        android:id="@+id/shipmentNumberTitle"
        style="@style/InpostTheme.TextView.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/shipment_number_title"
        app:layout_constraintEnd_toStartOf="@id/shipmentIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shipmentNumberValue"
        style="@style/InpostTheme.TextView.Value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintEnd_toStartOf="@id/shipmentIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipmentNumberTitle"
        tools:text="@tools:sample/lorem/random" />

    <!--Icon -->
    <ImageView
        android:id="@+id/shipmentIcon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/shipmentNumberValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/shipmentNumberTitle"
        tools:src="@drawable/ic_kurier" />

    <!--Shipment Status-->
    <TextView
        android:id="@+id/shipmentStatusTitle"
        style="@style/InpostTheme.TextView.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/shipment_status_title"
        app:layout_constraintEnd_toStartOf="@id/shipmentDateTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipmentNumberValue" />

    <TextView
        android:id="@+id/shipmentStatusText"
        style="@style/InpostTheme.TextView.Value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintEnd_toStartOf="@id/shipmentDateValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipmentStatusTitle"
        tools:text="@tools:sample/lorem/random" />

    <!--Shipment Date (optional)-->
    <TextView
        android:id="@+id/shipmentDateTitle"
        style="@style/InpostTheme.TextView.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipmentIcon"
        tools:text="@string/shipment_stored_delivery"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/shipmentDateValue"
        style="@style/InpostTheme.TextView.Value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipmentDateTitle"
        tools:text="pn. | 14.06.18 | 11:30"
        tools:visibility="visible" />

    <!--Sender email-->
    <TextView
        android:id="@+id/shipmentSenderEmailTitle"
        style="@style/InpostTheme.TextView.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/shipment_sender_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipmentStatusText" />

    <TextView
        android:id="@+id/shipmentSenderEmailValue"
        style="@style/InpostTheme.TextView.Value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintEnd_toStartOf="@id/shipmentDetailsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipmentSenderEmailTitle"
        tools:text="@tools:sample/lorem/random" />

    <!--Details-->
    <TextView
        android:id="@+id/shipmentDetailsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/shipment_details"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/shipmentSenderEmailValue"
        app:layout_constraintEnd_toStartOf="@id/shipmentArrowIcon"
        app:layout_constraintTop_toTopOf="@id/shipmentSenderEmailValue" />

    <ImageView
        android:id="@+id/shipmentArrowIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_6dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@id/shipmentDetailsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/shipmentDetailsText" />


</androidx.constraintlayout.widget.ConstraintLayout>
